keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-app
  namespace: keycloak-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak-app
  template:
    metadata:
      labels:
        app: keycloak-app
    spec:
      containers:
        - name:  kc-app
          image: ****
          command: ["/opt/keycloak/bin/kc.sh", "start"]
          args: ["--optimized"]
