keycloak/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless-service
  namespace: keycloak-system
spec:
  clusterIP: None
  selector:
    app: keycloak-app
