keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak-system
spec:
  ports:
    - name: httpport
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: infinispanport
      port: 7800
      targetPort: 7800
      protocol: TCP
  selector:
    app: keycloak-app
