keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-app
spec:
  parentRefs:
  - name: external-gateway
    namespace: cluster-gateways
  hostnames:
  - "****"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: keycloak-service
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
